add new html content

--- a/index.html
+++ b/index.html
@@ -1,43 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="Quiz App" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="Quiz App" content="width=device-width, initial-scale=1.0" />
     <title>Quiz App</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <header>
-        <h1>Quiz App</h1>
+      <h1>Quiz App</h1>
     </header>
 
-    <nav>
+    <main>
+      <div class="box">
+        <p>What property flips the axes in flexbox?</p>
+        <button>Show Answer</button>
         <ul>
-            <li><a href="#start">Startseite</a></li>
-            <li><a href="#Seite 1">Über uns</a></li>
-            <li><a href="#Seite 2">Kontakt</a></li>
+          <li>#html</li>
+          <li>#flexbox</li>
+          <li>#css</li>
         </ul>
-    </nav>
-
-    <section id="start">
-        <h2>Startseite</h2>
-        <p>Hier kommt der Inhalt für die Startseite.</p>
-    </section>
-
-    <section id="Seite 1">
-        <h2>Über uns</h2>
-        <p>Hier kommt der Inhalt über uns.</p>
-    </section>
-
-    <section id="Seite 2">
-        <h2>Kontakt</h2>
-        <p>Hier kommt der Kontaktinformationen.</p>
-    </section>
+      </div>
+    </main>
 
     <footer>
-        <p>&copy; 2024 Meine Webseite. Alle Rechte vorbehalten.</p>
+      <nav>
+        <ul>
+          <li><a href="#start">Startseite</a></li>
+          <li><a href="#Bookmarks">Über uns</a></li>
+          <li><a href="#Profile">Kontakt</a></li>
+        </ul>
+      </nav>
     </footer>
-
-</body>
+  </body>
 </html>
