add hidden answer test in html file

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     </header>
 
     <main>
+
+
       <div class="box">
         <p>What property flips the axes in flexbox?</p>
         <button>Show Answer</button>
@@ -21,6 +23,31 @@
           <li>#css</li>
         </ul>
       </div>
+
+      <div class="box">
+        <p>What property flips the axes in flexbox?</p>
+        
+        <button><a href="#until-found-box">Answer</a></button>
+
+        <p id="until-found-box" hidden"until-found">versteckter antworttext</p>
+
+        <ul>
+          <li>#html</li>
+          <li>#flexbox</li>
+          <li>#css</li>
+        </ul>
+      </div>
+
+      <div class="box">
+        <p>What property flips the axes in flexbox?</p>
+        <button>Show Answer</button>
+        <ul>
+          <li>#html</li>
+          <li>#flexbox</li>
+          <li>#css</li>
+        </ul>
+      </div>
+
     </main>
 
     <footer>
