--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
     </header>
 
     <main>
-
-
       <div class="box">
         <p>What property flips the axes in flexbox?</p>
-        <button>Show Answer</button>
+        <button><a href="#until-found-box">Show Answer</a></button>
+        <p id="until-found-box" hidden="until-found">flex-direction</p>
         <ul>
           <li>#html</li>
           <li>#flexbox</li>
@@ -26,10 +25,9 @@
 
       <div class="box">
         <p>What property flips the axes in flexbox?</p>
-        
-        <button><a href="#until-found-box">Answer</a></button>
 
-        <p id="until-found-box" hidden"until-found">versteckter antworttext</p>
+        <button><a href="#until-found-box">Show Answer</a></button>
+        <p id="until-found-box" hidden="until-found">flex-direction</p>
 
         <ul>
           <li>#html</li>
@@ -40,14 +38,16 @@
 
       <div class="box">
         <p>What property flips the axes in flexbox?</p>
-        <button>Show Answer</button>
+
+        <button><a href="#until-found-box">Show Answer</a></button>
+        <p id="until-found-box" hidden="until-found">flex-direction</p>
+
         <ul>
           <li>#html</li>
           <li>#flexbox</li>
           <li>#css</li>
         </ul>
       </div>
-
     </main>
 
     <footer>
