add a lot of styling and solved problems

--- a/index.html
+++ b/index.html
@@ -12,51 +12,51 @@
     </header>
 
     <main>
-      <div class="box">
-        <p>What property flips the axes in flexbox?</p>
-        <button><a href="#until-found-box">Show Answer</a></button>
-        <p id="until-found-box" hidden="until-found">flex-direction</p>
-        <ul>
-          <li>#html</li>
-          <li>#flexbox</li>
-          <li>#css</li>
-        </ul>
-      </div>
-
-      <div class="box">
+      <article class="box">
         <p>What property flips the axes in flexbox?</p>
 
         <button><a href="#until-found-box">Show Answer</a></button>
         <p id="until-found-box" hidden="until-found">flex-direction</p>
 
-        <ul>
+        <ul class="tags">
           <li>#html</li>
           <li>#flexbox</li>
           <li>#css</li>
         </ul>
-      </div>
+      </article>
 
-      <div class="box">
+      <article class="box">
         <p>What property flips the axes in flexbox?</p>
 
         <button><a href="#until-found-box">Show Answer</a></button>
         <p id="until-found-box" hidden="until-found">flex-direction</p>
 
-        <ul>
+        <ul class="tags">
           <li>#html</li>
           <li>#flexbox</li>
           <li>#css</li>
         </ul>
-      </div>
+      </article>
+
+      <article class="box">
+        <p>What property flips the axes in flexbox?</p>
+
+        <button><a href="#until-found-box">Show Answer</a></button>
+        <p id="until-found-box" hidden="until-found">flex-direction</p>
+
+        <ul class="tags">
+          <li>#html</li>
+          <li>#flexbox</li>
+          <li>#css</li>
+        </ul>
+      </article>
     </main>
 
     <footer>
       <nav>
-        <ul>
-          <li><a href="#start">Startseite</a></li>
-          <li><a href="#Bookmarks">Über uns</a></li>
-          <li><a href="#Profile">Kontakt</a></li>
-        </ul>
+        <a href="#start">Start</a>
+        <a href="#Bookmarks">Bookmarks</a>
+        <a href="#Profile">Profile</a>
       </nav>
     </footer>
   </body>
