--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
     <title>Quiz App</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
-    <header>
-      <h1>Quiz App</h1>
-    </header>
 
+  <header>
+    <h1>Quiz App</h1>
+  </header>
+
+  <body>
     <main>
       <article class="box">
         <p>What property flips the axes in flexbox?</p>
 
-        <button><a href="#until-found-box">Show Answer</a></button>
+        <button>
+          <a href="#until-found-box">Show Answer</a>
+        </button>
         <p id="until-found-box" hidden="until-found">flex-direction</p>
 
         <ul class="tags">
@@ -28,7 +31,9 @@
       <article class="box">
         <p>What property flips the axes in flexbox?</p>
 
-        <button><a href="#until-found-box">Show Answer</a></button>
+        <button>
+          <a href="#until-found-box">Show Answer</a>
+        </button>
         <p id="until-found-box" hidden="until-found">flex-direction</p>
 
         <ul class="tags">
@@ -41,7 +46,9 @@
       <article class="box">
         <p>What property flips the axes in flexbox?</p>
 
-        <button><a href="#until-found-box">Show Answer</a></button>
+        <button>
+          <a href="#until-found-box">Show Answer</a>
+        </button>
         <p id="until-found-box" hidden="until-found">flex-direction</p>
 
         <ul class="tags">
