--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <p>What property flips the axes in flexbox?</p>
 
         <button>
-          <a href="#until-found-box">Show Answer</a>
+          <a href="#antwort1">Show Answer</a>
         </button>
-        <p id="until-found-box" hidden="until-found">flex-direction</p>
+        <p id="antwort1" hidden="until-found">flex-direction</p>
 
         <ul class="tags">
           <li>#html</li>
@@ -32,9 +32,9 @@
         <p>What property flips the axes in flexbox?</p>
 
         <button>
-          <a href="#until-found-box">Show Answer</a>
+          <a href="#antwort2">Show Answer</a>
         </button>
-        <p id="until-found-box" hidden="until-found">flex-direction</p>
+        <p id="antwort2" hidden="until-found">Antwort 2</p>
 
         <ul class="tags">
           <li>#html</li>
@@ -47,9 +47,9 @@
         <p>What property flips the axes in flexbox?</p>
 
         <button>
-          <a href="#until-found-box">Show Answer</a>
+          <a href="#antwort3">Show Answer</a>
         </button>
-        <p id="until-found-box" hidden="until-found">flex-direction</p>
+        <p id="antwort3" hidden="until-found">Antwort 3</p>
 
         <ul class="tags">
           <li>#html</li>
